--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MODE=dev
 SERVICE_NAME=bwa-storegg
 # MONGO_URL=mongodb://bwamern21:bwamern21@cluster0-shard-00-00.uwjpx.mongodb.net:27017,cluster0-shard-00-01.uwjpx.mongodb.net:27017,cluster0-shard-00-02.uwjpx.mongodb.net:27017/db_bwa_storegg?ssl=true&replicaSet=atlas-kdmqpf-shard-0&authSource=admin&retryWrites=true&w=majority
-MONGO_URL=mongodb://bwamern21:bwamern21@cluster0-shard-00-00.uwjpx.mongodb.net:27017,cluster0-shard-00-01.uwjpx.mongodb.net:27017,cluster0-shard-00-02.uwjpx.mongodb.net:27017/?ssl=true&replicaSet=atlas-kdmqpf-shard-0&authSource=admin&retryWrites=true&w=majority
+MONGO_URL=mongodb://bwamern21:bwamern21@cluster0-shard-00-00.uwjpx.mongodb.net:27017,cluster0-shard-00-01.uwjpx.mongodb.net:27017,cluster0-shard-00-02.uwjpx.mongodb.net:27017/db_bwa_storegg?ssl=true&replicaSet=atlas-kdmqpf-shard-0&authSource=admin&retryWrites=true&w=majority
 MONGO_URL_DEV=mongodb://127.0.0.1:27017/db_bwa_storegg
 SECRET=ggatyupzt
